<resources>
    <string name="app_name">HueLight</string>
    <string name="temptext">TempText</string>
    <string name="name">Name :</string>
    <string name="on">On :</string>
    <string name="power_on">Power on</string>
    <string name="power_off">Power off</string>
    <string name="rainbow">Rainbow</string>
    <string name="none">None</string>
    <string name="name_of_lamp">Name of lamp</string>
    <string name="hue">Hue :</string>
    <string name="saturation">Saturation :</string>
    <string name="brightness">Brightness :</string>
    <string name="uniqueid">UniqueID :</string>
    <string name="colorloop">Colorloop :</string>
    <string name="save_changes">Save changes</string>
    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="settings">Settings</string>
    <string name="lightbulb_list">Light Bulb list</string>
    <string name="lightbulb_name">Light Bulb name</string>
    <string name="csd_opdracht_2">CSD assignment 2</string>
    <string name="made_by_nicholas_and_shinichi">Made by Nicholas and Shinichi</string>
    <string name="appicon">AppIcon</string>
    <string name="hue_bridge_settings">Hue Bridge settings</string>
    <string name="ip_address">IP address</string>
    <string name="port_number">Port number</string>
    <string name="developer_name">Developer name</string>
</resources>